--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
     "name": "framer-animations",
-    "version": "1.0.17",
+    "version": "1.1.1",
     "description": "Simple, programmatic `framer-motion` animations",
     "main": "dist/index.js",
     "scripts": {
         "build": "npx tsc -p tsconfig.json",
         "init": "npm install --save-dev typescript",
         "react": "npm i react react-dom && npm install @types/react @types/react-dom --save-dev"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/moveread/framer-animations"
     },
     "author": "Marcel Claramunt",
     "license": "ISC",
