--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "framer-animations",
-    "version": "1.2.15",
+    "version": "1.3.0",
     "description": "Simple, programmatic `framer-motion` animations",
     "main": "dist/index.js",
     "scripts": {
@@ -23,5 +23,6 @@
         "framer-motion": "^11.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
-    }
+    },
+    "packageManager": "yarn@4.1.0"
 }
