--- a/framer-animations/package.json
+++ b/framer-animations/package.json
@@ -1,6 +1,6 @@
 {
     "name": "framer-animations",
-    "version": "1.3.0",
+    "version": "1.3.2",
     "description": "Simple, programmatic `framer-motion` animations",
     "main": "dist/index.js",
     "scripts": {
@@ -10,7 +10,8 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/moveread/framer-animations"
+        "url": "https://github.com/moveread/framer-animations",
+        "directory": "framer-animations"
     },
     "author": "Marcel Claramunt",
     "license": "ISC",
