--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ lerna-debug.log*
 .pnpm-debug.log*
 
 playground
-
+install-state.gz
+.yarn
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
