--- a/framer-animations/package.json
+++ b/framer-animations/package.json
@@ -3,9 +3,11 @@
     "version": "1.3.6",
     "description": "Simple, programmatic `framer-motion` animations",
     "main": "dist/index.js",
+    "type": "module",
     "scripts": {
         "build": "npx tsc -p tsconfig.json",
         "init": "npm install --save-dev typescript",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "react": "npm i react react-dom && npm install @types/react @types/react-dom --save-dev"
     },
     "repository": {
@@ -13,17 +15,24 @@
         "url": "https://github.com/moveread/framer-animations",
         "directory": "framer-animations"
     },
+    "engines": {
+        "node": "^18.0.0 || >=20.0.0"
+    },
     "author": "Marcel Claramunt",
     "license": "ISC",
     "devDependencies": {
         "@types/react": "^18.2.38",
         "@types/react-dom": "^18.2.17",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "eslint": "^8.56.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
         "typescript": "^5.3.2"
     },
     "dependencies": {
         "framer-motion": "^11.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
-    },
-    "packageManager": "yarn@4.1.0"
+    }
 }
