--- a/framer-animations/Justfile
+++ b/framer-animations/Justfile
@@ -2,4 +2,4 @@ alias pub := publish
 
 publish:
 	rm -dr dist || echo 'No previous dist'
-	yarn run build && yarn version patch && npm publish
+	yarn run build && yarn version --patch && npm publish
