--- a/framer-animations/package.json
+++ b/framer-animations/package.json
@@ -32,5 +32,6 @@
         "framer-motion": "^11.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
-    }
+    },
+    "readme": "README.md"
 }
