--- a/framer-animations/package.json
+++ b/framer-animations/package.json
@@ -1,6 +1,6 @@
 {
     "name": "framer-animations",
-    "version": "1.3.10",
+    "version": "1.3.11",
     "description": "Simple, programmatic `framer-motion` animations",
     "main": "dist/index.js",
     "scripts": {
@@ -11,8 +11,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/moveread/framer-animations",
-        "directory": "framer-animations"
+        "url": "https://github.com/moveread/framer-animations"
     },
     "engines": {
         "node": "^18.0.0 || >=20.0.0"
