--- a/framer-animations/package.json
+++ b/framer-animations/package.json
@@ -1,6 +1,6 @@
 {
     "name": "framer-animations",
-    "version": "1.3.11",
+    "version": "1.3.12",
     "description": "Simple, programmatic `framer-motion` animations",
     "main": "dist/index.js",
     "scripts": {
@@ -32,5 +32,5 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
-    "readme": "README.md"
+    "readme": "../README.md"
 }
