--- a/framer-animations/package.json
+++ b/framer-animations/package.json
@@ -1,13 +1,14 @@
 {
     "name": "framer-animations",
-    "version": "1.3.13",
+    "version": "1.3.14",
     "description": "Simple, programmatic `framer-motion` animations",
     "main": "dist/index.js",
     "scripts": {
         "build": "npx tsc -p tsconfig.json",
         "init": "npm install --save-dev typescript",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "react": "npm i react react-dom && npm install @types/react @types/react-dom --save-dev"
+        "react": "npm i react react-dom && npm install @types/react @types/react-dom --save-dev",
+        "prepublishOnly": "cp ../README.md ."
     },
     "repository": {
         "type": "git",
