--- a/demo/package.json
+++ b/demo/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-tsconfig-paths": "^4.3.1"
   }
 }
