--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -21,7 +21,7 @@
     "noFallthroughCasesInSwitch": true,
 
     "paths": {
-      "framer-animations": ["/home/m4rs/mr-github/lib/js/ui/framer-animations/framer-animations/src"]
+      // "framer-animations": ["/home/m4rs/mr-github/lib/js/ui/framer-animations/framer-animations/src"]
     }
   },
   "include": ["src"],
