--- a/framer-animations/package.json
+++ b/framer-animations/package.json
@@ -1,8 +1,9 @@
 {
     "name": "framer-animations",
-    "version": "1.4.13",
+    "version": "1.4.14",
     "description": "Simple, programmatic `framer-motion` animations",
     "main": "dist/index.js",
+    "type": "module",
     "scripts": {
         "build": "npx tsc -p tsconfig.json",
         "init": "npm install --save-dev typescript",
