--- a/demo/package.json
+++ b/demo/package.json
@@ -16,7 +16,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "framer-animations": "^1.4.8",
+    "@haskellian/async": "^1.0.0",
+    "framer-motion": "^11.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
